--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "framer-motion": "^12.18.1",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.516.0",
     "next": "15.3.3",
